1.6.7
	* EXPERIMENTAL ecdsa implementation, please do not enable on real
	  servers.
        * bugfix #326: ignore whitespace between directives and their values.
	* Header comment to advertise ldns_axfr_complete to check for
	  successfully completed zone transfers.
	* read resolv.conf skips interface labels, e.g. %eth0.
	* Fix drill verify NSEC3 denials.
	* Use closesocket() on windows.

1.6.6
	* Fix ldns_rr_clone to copy question rrs properly.
	* Fix ldns_sign_zone(_nsec3) to clone the soa for the new zone.
	* Fix ldns_wire2dname size check from reading 1 byte beyond buffer end.
	* Fix ldns_wire2dname from reading 1 byte beyond end for pointer.
	* Fix crash using GOST for particular platform configurations.
	* extern C declarations used in the header file.
	* Removed debug fprintf from resolver.c.
	* ldns-signzone checks if public key file is for the right zone.
	* NETLDNS, .NET port of ldns functionality, by Alex Nicoll, in contrib.
	* Fix handling of comments in resolv.conf parse.
	* GOST code enabled if SSL recent, RFC 5933.
	* bugfix #317: segfault util.c ldns_init_random() fixed.
	* Fix ldns_tsig_mac_new: allocate enough memory for the hash, fix use of
	  b64_pton_calculate_size.
	* Fix ldns_dname_cat: size calculation and handling of realloc().
	* Fix ldns_rr_pop_rdf: fix handling of realloc().
	* Fix ldns-signzone for single type key scheme: sign whole zone if there
	  are only KSKs.
	* Fix ldns_resolver: also close socket if AXFR failed (if you don't,
          it would block subsequent transfers (thanks Roland van Rijswijk).
        * Fix drill: allow for a secure trace if you use DS records as trust
	  anchors (thanks Jan Komissar).

1.6.5
	* Catch \X where X is a digit as an error.
	* Fix segfault when ip6 ldns resolver only has ip4 servers.
	* Fix NSEC record after DNSKEY at zone apex not properly signed.
	* Fix syntax error if last label too long and no dot at end of domain. 
	* Fix parse of \# syntax with space for type LOC.