@@ -7,6 +7,8 @@
 	* read resolv.conf skips interface labels, e.g. %eth0.
 	* Fix drill verify NSEC3 denials.
 	* Use closesocket() on windows.
+	* Add ldns_get_signing_algorithm_by_name that understand aliases,
+	  names changed to RFC names and aliases for compatibility added.
 
 1.6.6
 	* Fix ldns_rr_clone to copy question rrs properly.
